<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_scheme"
        android:icon="@drawable/scheme_foreground"
        android:title="@string/title_scheme" />
    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/education_foreground"
        android:title="@string/title_education" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_breathe"
        android:icon="@mipmap/breathe_foreground"
        android:title="@string/title_breathe" />
    <item
        android:id="@+id/navigation_logs"
        android:icon="@drawable/logs_foreground"
        android:title="@string/title_logs" />

</menu>
